--- a/src/LetterSection.css
+++ b/src/LetterSection.css
@@ -2,12 +2,11 @@
     font-size: x-large;
     font-weight: bolder;
     margin-bottom: 20px;
-    margin-top: 30px;
 }
 .lettersection__noemployees {
     font-size: large;
     font-weight: bold;
 }
 .lettersection {
-    margin: 10px;
+    margin: 0px 10px;
 }
