--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .employees {
   max-width: 800px;
 }
-.lettersections-wrapper {
+.info-wrapper--lettersection {
   display: flex;
   flex-wrap: wrap;
 }
@@ -25,9 +25,20 @@
   font-weight: bold;
 }
 
-.months-wrapper,
-.lettersections-wrapper {
+.info-wrapper {
   margin-top: 40px;
+  position: relative;
+}
+.info-wrapper::before {
+  position: absolute;
+  content: "";
+  display: block;
+  height: 1px;
+  width: 90%;
+  top: -9px;
+  left: 0;
+  right: 0;
+  background-color: black;
 }
 
 .birthdates {
@@ -47,5 +58,8 @@
     margin-top: 0px;
     margin-left: auto;
     flex: 0 0 auto;
+  }
+  .info-wrapper::before {
+    width: 95%;
   }
 }
